Changed the plugin's name.

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,6 +1,6 @@
 main: com.github.sindastra.HomeTeleport.Main
-version: v0.0.1
-name: HomeTeleport
+version: v0.0.2
+name: SindastrasHomeTeleport
 commands:
     home:
         description: Teleports a user to their bed.
