--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,8 +6,14 @@ name: Java CI with Maven
 on:
   push:
     branches: [ master ]
+    paths:
+      - '**.java'
+      - 'pom.xml'
   pull_request:
     branches: [ master ]
+    paths:
+      - '**.java'
+      - 'pom.xml'
 
 jobs:
   build:
